<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/sushi"
        android:contentDescription="@string/onboard_title_2"
        android:layout_marginBottom="24dp"
        android:scaleType="fitCenter" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboard_title_2"
        android:textColor="@color/accentColor"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:text="@string/onboard_desc_2"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:layout_marginBottom="32dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="12dp"
        android:text="@string/onboard_next"
        android:backgroundTint="@color/accentColor"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp" />


</LinearLayout>
