<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/secondaryColor"
    android:paddingTop="30sp">


    <TextView
        android:id="@+id/tvFavoritesHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites_header"
        android:textSize="22sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:gravity="center"
        android:textColor="@android:color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/favoritesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/spageti" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe_carbonara"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingTop="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe_carbonara_category"
                        android:textSize="14sp"
                        android:paddingTop="4dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/lava_cake" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe_lava_cake"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingTop="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe_lava_cake_category"
                        android:textSize="14sp"
                        android:paddingTop="4dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:menu="@menu/bottom_nav_menu" />

</LinearLayout>
